--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,43 +42,8 @@
     object-fit: cover;
 }
 
-.product-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
-    margin: 30px 0;
-}
-
 .btn-lg {
     font-size: 15px;
-}
-
-.product-card {
-    background: white;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s;
-}
-
-.product-card:hover {
-    transform: translateY(-5px);
-}
-
-.product-card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-
-.product-info {
-    padding: 15px;
-}
-
-.product-price {
-    color: var(--primary-color);
-    font-weight: bold;
-    font-size: 1.2rem;
 }
 
 .btn-primary {
@@ -99,10 +64,6 @@
 .btn-outline-primary:hover {
     background-color: var(--primary-color);
     color: white;
-}
-
-.product-card h5 {
-    margin-top: 20px;
 }
 
 .newsletter-form {
@@ -144,6 +105,10 @@
     margin: 0 5px;
 }
 
+
+.beneficios {
+    margin-top: -60px;
+}
 
 @media (max-width: 768px) {
     .carousel-item {
