--- a/src/css/style.css
+++ b/src/css/style.css
@@ -110,6 +110,16 @@
     margin-top: -60px;
 }
 
+.badge-eco {
+    background-color: var(--secondary-color);
+    color: var(--dark-color);
+    padding: 5px 10px;
+    border-radius: 20px;
+    font-size: 0.8rem;
+    font-weight: 600;
+}
+
+
 @media (max-width: 768px) {
     .carousel-item {
         height: 300px;
